add new contract versioning logic and integrate `ValidarDadosContratuaisService` in `NovoContratoService` and `ValidarContratoService` to enhance validation and data synchronization